--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -9,9 +9,9 @@
             <tr><td>Closed?</td>
             <td><%= d.check_box :closed %></td></tr>
             <tr><td>Opening Time</td>
-            <td><%= d.select :opening_time, time_list %></td></tr>
+            <td><%= d.select :opening_time, time_list, :selected => day.open %></td></tr>
             <tr><td>Closing Time</td>
-            <td><%= d.select :closing_time, time_list %></td></tr>
+            <td><%= d.select :closing_time, time_list, :selected => day.close %></td></tr>
         <% end %>
         </table>
         </p>
