--- a/app/views/application/_logged_out.html.erb
+++ b/app/views/application/_logged_out.html.erb
@@ -1,2 +1,3 @@
 <td><a href="<%= new_user_path %>">Sign Up</a></td>
 <td><a href="<%= signin_path %>">Log In</a></td>
+<td><%= link_to('Facebook Login', '/auth/facebook') %></td>
