--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,3 +1,12 @@
+<% if !review.errors.empty? %>
+    <div class="error">
+    <h4>Please correct the following errors.</h4><ul>
+    <% review.errors.full_messages.each do |error| %>
+        <li><%= error %>.</li>
+    <% end %>
+    </ul>
+    </div>
+<% end %>
 <%= form_for review do |f| %>
     <p>
     <%= f.hidden_field :user_id, value: current_user.id %>
