--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,12 @@
+<% if !user.errors.empty? %>
+    <div class="error">
+    <h4>Please correct the following errors.</h4><ul>
+    <% user.errors.full_messages.each do |error| %>
+        <li><%= error %>.</li>
+    <% end %>
+    </ul>
+    </div>
+<% end %>
 <%= form_for user do |f| %>
     <table>
     <tr><td><%= f.label :user_name, 'User Name : ' %></td>
