--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,9 @@
 <h1>Your Profile</h1>
-<p>User name : <%= @user.user_name %></p>
-<p>Email : <%= @user.email %></p>
-<p><%= link_to "Click here to edit your information", edit_user_path(@user) %></p>
+<% if @user.facebook %>
+    <%= render partial: "facebook", locals: {user: @user} %>
+<% else %>
+    <%= render partial: "standard", locals: {user: @user} %>
+<% end %>
 <h3>Your Reviews</h3>
 <% if @user.reviews.empty? %>
     You have written no reviews.
