--- a/app/views/restaurants/_days.html.erb
+++ b/app/views/restaurants/_days.html.erb
@@ -4,7 +4,7 @@
         <%= d.hidden_field :weekday_number, value: count %>
         <p>
         <table>
-        <td><th><%= day_to_week(count) %></td></tr>
+        <tr><th><%= day_to_week(count) %></td></tr>
         <tr><td>Closed?</td>
         <td><%= d.check_box :closed %></td></tr>
         <tr><td>Opening Time</td>
